--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -20,6 +20,7 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - working-directory: client
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -27,5 +28,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-#     - run: npm run build --if-present
-#     - run: npm test
+    - run: npm run build --if-present
+    - run: npm test
