--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -11,7 +11,7 @@ on:
 
 defaults:
   run:
-    working-directory: client
+    working-directory: ./client/
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,6 +27,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: './client/package-lock.json'
+        
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
