--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "framer-motion": "^10.12.16",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
