--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "https://github.com/izzul-ali",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "prisma": "^4.15.0",
@@ -20,6 +21,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
