--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.8",
     "prisma": "^4.15.0",
@@ -24,10 +26,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.3"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
+    "socket.io": "^4.7.1"
   }
 }
