--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,11 @@
     "eslint-config-next": "13.4.5",
     "framer-motion": "^10.12.16",
     "immer": "^10.0.2",
-    "next": "13.4.5",
+    "next": "^13.4.8",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "sharp": "^0.32.1",
     "socket.io-client": "^4.7.1",
